_includes/assets/css/inline.css
:root {
	--white: white;
	--brand-color: rgb(235, 237, 242);
	--text-color: #2d2d2d;
}

*, *:before, *:after {
  box-sizing: border-box;
}

/* Defaults
*********************************************************************************************************************/
html,
body {
	padding: 0;
	margin: 0;
	font-family: "Lora", "Georgia", serif;
}

img {
	max-width: 100%;
}

iframe {
	margin: 1.45rem 0;
    max-width: 100%;
}

code {
	background: var(--brand-color);
}
pre code {
	background: none;
}

figure {
	margin: 1.5rem 0;
}

blockquote {
    border-left: 5px solid var(--brand-color);
    margin-bottom: 1.5rem;
    margin-top: 1.5rem;
    padding: 1rem 1rem 0;
}

table {
	border: 1px solid var(--brand-color);
	border-collapse: collapse;
	margin: 1.25rem 0;
	text-align: left;
}
table tbody th {
	font-style: italic;
	font-weight: normal;
}

nav,
nav h3 {
	margin: 0;
}

.marginnote {
    display: block;
}

.brand-bg {
	background: var(--brand-color);
}

/* Typography
*********************************************************************************************************************/

html,
body {
	color: var(--text-color);
	line-height: 1.5;
}

a,a:visited {
	color: var(--text-color);
	font-weight: bold;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}

.article-inner a, .article-inner a:visited,
.recent-inner h4 a, .recent-inner h4 a:visited {
	color: steelblue;
	font-style: italic;
}

.sans-serif {
	font-family: "Source Sans Pro", "Helvetica", sans-serif;
}

.tags {
	text-transform: capitalize;
}
.tags a, .tags a:visited {
	margin-right: 0.2rem;
}

/* Containers
*********************************************************************************************************************/
.home-container, .title-container, .recent-container, .article-container, .footer-container {
	width: 100%;
}

/* Inner Containers
*********************************************************************************************************************/
.home-inner, .recent-inner, .title-inner, .article-inner, .nav, .footer-inner {
	display: flex;
	flex-direction: column;
	margin: 0 auto;
	max-width: 65rem;
}

.nav h3 {
	margin: 2rem 1rem 0;
}
.nav h3 a, .nav h3 a:visited {
	color: steelblue;
	font-style: italic;
}

.home-inner {
	justify-content: center;
	padding: 15rem 1rem;
}
.home-inner h1 {
	font-size: 4rem;
	margin: 0 0 1rem 0;
}
.home-inner p {
	font-size: 1.8rem;
	margin: 0 0 0.8rem 0;
}
.home-inner nav ul {
	list-style: none;
	padding: 1.5rem 0 0 0;
}
.home-inner nav ul li {
	display: inline-block;
	font-size: 1.5rem;
	margin-right: 2rem;
}

.recent-inner {
	justify-content: space-between;
	padding: 6rem 1rem;
}
.recent-inner:first-of-type {
	padding-bottom: 2.5rem;
}
.recent-inner h2 {
	color: rgba(0,0,0,0.6);
	font-weight: normal;
	font-style: italic;
	font-size: 1.8rem;
	margin: 0 0 4rem 0;
	position: relative;
}
.recent-inner h2:before {
	background: rgba(0,0,0,0.6);
	content:'';
	height: 1px;
	left: -80px;
	position: absolute;
	top: 50%;
	width: 60px;
}
.recent-inner > div {
	padding: 0.5rem 0;
}
.recent-inner > div h3 {
	font-size: 2.4rem;
	margin: 0 0 1rem 0;
}
.recent-inner > div p {
	margin: 1rem 0 0.5rem 0;
}
.recent-inner > div p.project-info {
	font-size: 1.25rem;
	margin: -0.5rem 0 2.2rem;
}
.recent-inner > div p.last-project {
	margin-bottom: 0;
}
.recent-inner h4 {
	font-size: 1.5rem;
	margin: 4rem 0;
}

.title-inner {
	justify-content: center;
	padding: 5rem 1rem;
}
.title-inner h1 {
	font-size: 4rem;
	margin: 0 0 1rem 0;
}
.title-inner p {
	font-size: 1.2rem;
	margin: 0 0 0.8rem 0;
}

.article-inner {
	padding: 6rem 1rem;
}
.article-inner ul, .article-inner ol, .article-inner p, .article-inner table {
	font-size: 21px;
	letter-spacing: -0.003em;
	line-height: 1.58;
}
.article-inner ul, .article-inner ol, .article-inner p {
	max-width: 720px;
}
.article-inner ul, .article-inner ol {
	margin: 1.45rem 0;
}
.article-inner p {
	margin: 0 0 1.45rem 0;
}
.article-inner table tr {
	border-bottom: 1px solid var(--brand-color);
}
.article-inner table th, .article-inner table td {
	padding: 0.5rem;
}

.footer-inner {
	justify-content: center;
	padding: 6rem 1rem;
}

@media (max-width: 768px) {
	.home-inner, .title-inner, .recent-inner, .article-inner {
		padding: 4rem 1rem;
	}
	.home-inner h1 {
		font-size: 2.2rem;
		line-height: 1.2;
		margin-bottom: 2.5rem;
	}
	.home-inner h1 span {
		display: block;
	}
	.home-inner p {
		font-size: 1.2rem;
	}
	.home-inner nav ul li {
		font-size: 16px;
		margin-right: 1rem;
	}
	.title-inner h1 {
		font-size: 2rem;
	}
	.title-inner p {
		font-size: 0.9rem;
	}
	.recent-inner h2 {
		font-size: 1.5rem;
		margin: 0 0 2rem 1rem;
		padding-left: ;
	}
	.recent-inner h2:before {
		left: -70px;
	}
	.recent-inner > div h3,
	.recent-inner h4 {
		font-size: 1.4rem;
	}
	.recent-inner > div p {
		font-size: 0.9rem;
	}
	.article-inner > div p.project-info {
		font-size: 0.9rem;
	}
	.article-inner ul, .article-inner ol, .article-inner p, .article-inner table {
		font-size: 16px;
		letter-spacing: -0.003em;
		line-height: 1.70;
	}
	.footer-inner {
		padding: 3rem 1rem;
	}
	.footer-inner p {
		font-size: 0.9rem;
	}
}

/**
 * GHColors theme by Avi Aryan (http://aviaryan.in)
 * Inspired by Github syntax coloring
 */

code[class*="language-"],
pre[class*="language-"] {
    color: #393A34;
    font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
    direction: ltr;
    text-align: left;
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
    font-size: 0.95em;
    line-height: 1.2em;

    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;

    -webkit-hyphens: none;
    -moz-hyphens: none;
    -ms-hyphens: none;
    hyphens: none;
}

pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
    background: #b3d4fc;
}

pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
code[class*="language-"]::selection, code[class*="language-"] ::selection {
    background: #b3d4fc;
}

/* Code blocks */
pre[class*="language-"] {
    padding: 1rem;
    margin: 0 0 2rem 0;
    overflow: auto;
    border: 1px solid #dddddd;
    background-color: white;
    max-width: 720px;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
}

/* Inline code */
:not(pre) > code[class*="language-"] {
    padding: .2em;
    padding-top: 1px; padding-bottom: 1px;
    background: #f8f8f8;
    border: 1px solid #dddddd;
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
    color: #999988; font-style: italic;
}

.token.namespace {
    opacity: .7;
}

.token.string,
.token.attr-value {
    color: #e3116c;
}
.token.punctuation,
.token.operator {
    color: #393A34; /* no highlight */
}

.token.entity,
.token.url,
.token.symbol,
.token.number,
.token.boolean,
.token.variable,
.token.constant,
.token.property,
.token.regex,
.token.inserted {
    color: #36acaa;
}

.token.atrule,
.token.keyword,
.token.attr-name,
.language-autohotkey .token.selector {
    color: #00a4db;
}

.token.function,
.token.deleted,
.language-autohotkey .token.tag {
    color: #9a050f;
}

.token.tag,
.token.selector,
.language-autohotkey .token.keyword {
    color: #00009f;
}

.token.important,
.token.function,
.token.bold {
    font-weight: bold;
}

.token.italic {
    font-style: italic;
}

